impl Spring Data Rest magic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Application:
 spring.application.name=Spring Data Rest and HAL Explorer
+server.port=8092
+
+# Database:
+spring.datasource.url=jdbc:mysql://localhost:3306/datarestdb
+spring.datasource.username=datarestuser
+spring.datasource.password=datarestP@s$w0rd
+spring.jpa.hibernate.ddl-auto=update
+
+# Spring Data Rest
+spring.data.rest.base-path=/data-api
